# omaha-estate-hunter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  config.yaml  middleware.js  next.config.js  package-lock.json  package.json  pyproject.toml
app/: ImageGallery.js  MapView.js  SalesClient.js  layout.js  page.js
app/api/analyze/: route.js
app/api/auth/: route.js
app/api/sales/: route.js
app/lib/: ebay.js  routePlanner.js  transformSale.js
app/login/: page.js
src/estate_pricer/: __init__.py  cli.py  config.py  db.py
src/estate_pricer/analyzer/: __init__.py  dedup.py  prompts.py  vision.py
src/estate_pricer/output/: __init__.py  csv_export.py  html_export.py  json_export.py  terminal.py
src/estate_pricer/pricer/: __init__.py  cache.py  calculator.py  ebay.py
src/estate_pricer/scraper/: __init__.py  base.py  detector.py  estatesales_net.py  estatesales_org.py
tests/: test_analyzer.py  test_calculator.py  test_config.py  test_db.py  test_dedup.py  test_scraper.py
